--- a/wally.toml
+++ b/wally.toml
@@ -8,3 +8,4 @@ realm = "shared"
 Trove = "sleitnick/trove@0.4.1"
 Signal = "sleitnick/signal@1.2.0"
 Binder = "4812571/binder@0.1.1"
+Knit = "sleitnick/knit@^1"
