Add Oklab Package

--- a/wally.toml
+++ b/wally.toml
@@ -12,3 +12,4 @@ Trove = "sleitnick/trove@0.4.1"
 Signal = "sleitnick/signal@1.2.0"
 Binder = "4812571/binder@0.1.1"
 Knit = "sleitnick/knit@^1"
+Oklab = "nottirb/oklab@1.0.0"
