--- a/wally.toml
+++ b/wally.toml
@@ -13,3 +13,4 @@ Signal = "sleitnick/signal@1.2.0"
 Binder = "4812571/binder@0.1.1"
 Knit = "sleitnick/knit@^1"
 Oklab = "nottirb/oklab@1.0.0"
+Timer = "sleitnick/timer@1.1.2"
