--- a/wally.toml
+++ b/wally.toml
@@ -12,3 +12,6 @@ Trove = "sleitnick/trove@0.4.1"
 Signal = "sleitnick/signal@1.2.0"
 Binder = "4812571/binder@0.1.1"
 Knit = "sleitnick/knit@^1"
+Silo = "sleitnick/silo@0.1.1"
+Comm = "sleitnick/comm@0.3.1"
+Promise = "evaera/promise@4.0.0"
