--- a/wally.toml
+++ b/wally.toml
@@ -14,3 +14,4 @@ Binder = "4812571/binder@0.1.1"
 Knit = "sleitnick/knit@^1"
 Oklab = "nottirb/oklab@1.0.0"
 Timer = "sleitnick/timer@1.1.2"
+Spring = "brittonfischer/spring@0.1.0"
