Add Symbol dependency

--- a/wally.toml
+++ b/wally.toml
@@ -15,3 +15,4 @@ Knit = "sleitnick/knit@^1"
 Oklab = "nottirb/oklab@1.0.0"
 Timer = "sleitnick/timer@1.1.2"
 Spring = "brittonfischer/spring@0.1.0"
+Symbol = "sleitnick/symbol@2.0.1"
