--- a/default.project.json
+++ b/default.project.json
@@ -2,6 +2,13 @@
 	"name": "Voltz",
 	"tree": {
 		"$className": "DataModel",
+		"Workspace": {
+			"$className": "Workspace",
+			"$properties": {
+				"Gravity": 70
+			}
+		},
+
 		"ServerScriptService": {
 			"$className": "ServerScriptService",
 			"$path": "src/ServerScriptService"
