--- a/wally.toml
+++ b/wally.toml
@@ -11,6 +11,7 @@ StoryTaskBar = "nottirb/storytaskbar@0.1.4"
 Trove = "sleitnick/trove@0.5.0"
 Signal = "sleitnick/signal@1.2.0"
 Binder = "4812571/binder@0.1.1"
+BinderProvider = "4812571/binder-provider@0.1.1"
 Knit = "sleitnick/knit@^1"
 Oklab = "nottirb/oklab@1.0.0"
 Timer = "sleitnick/timer@1.1.2"
